# yggdrasil

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  \  bm_run.sh  docker_run.sh  dr_run.sh  flake.nix  printboard.py  tst_run.sh
benchmark/game/: chess_benchmark.cpp
benchmark/mcts/: rollout_benchmark.cpp
experiments/: no_opti.csv  record_time.py
experiments/data/: no_opti.csv
include/: utils.h
include/agents/: mcts_agent.h  random_agent.h  user_agent.h
include/game/: chess.h  driver.h  inits.h  moves.h
include/game/pieces/: piece.h
include/mcts/: backprop.h  expansion.h  gametree.h  rollout.h  selection.h
src/: utils.cpp
src/agents/: mcts_agent.cpp  random_agent.cpp  user_agent.cpp
src/game/: chess.cpp  driver.cpp  moves.cpp
src/mcts/: backprop.cpp  expansion.cpp  gametree.cpp  random_simul.cpp  rollout.cpp  selection.cpp
tests/: utils_test.cpp  utils_tests.cpp
tests/game/: chess_tests.cpp  driver_tests.cpp  moves_tests.cpp
tests/mcts/: backprop_tests.cpp  expansion_tests.cpp  gametree_tests.cpp  rollout_tests.cpp  selection_tests.cpp
